ref getmethod without user_if
